--- a/pepeizqs deals web/Pages/Bundles.cshtml
+++ b/pepeizqs deals web/Pages/Bundles.cshtml
@@ -82,26 +82,12 @@
 
 	if (seo == true)
 	{
-		@(await Html.RenderComponentAsync<Componentes.Secciones.Seo>(RenderMode.ServerPrerendered, new
-		{
-			idioma = idioma,
-			titulo = titulo,
-			enlace = enlace,
-			canonical = enlace,
-			descripcion = descripcion
-		}))
+		<component type="typeof(Componentes.Secciones.Seo)" render-mode="Server" param-idioma="idioma" param-titulo="titulo" param-descripcion="descripcion" param-enlace="enlace" param-canonical="enlace" />
 
-		@(await Html.RenderComponentAsync<Componentes.Secciones.Bundles>(RenderMode.ServerPrerendered, new
-		{
-			idioma = idioma
-		}))
+		<component type="typeof(Componentes.Secciones.Bundles)" render-mode="Server" param-idioma="idioma"/>
 	}
 	else
 	{
-		@(await Html.RenderComponentAsync<Componentes.Secciones.Bundles>(RenderMode.Server, new
-		{
-			idioma = idioma,
-			usuarioId = usuario?.Id
-		}))
+		<component type="typeof(Componentes.Secciones.Bundles)" render-mode="Server" param-idioma="idioma" param-usuarioId="usuario?.Id" />
 	}
 }
