--- a/pepeizqs deals web/Pages/Componentes/Secciones/UltimasNoticias.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/UltimasNoticias.razor
@@ -20,7 +20,7 @@
 			</div>
 			<div style="flex: 1;"></div>
 
-			<pepeizqs_deals_web.Pages.Componentes.Interfaz.RedesSociales idioma="@idioma" tamañoFuente="20px" />
+			<pepeizqs_deals_web.Pages.Componentes.Interfaz.RedesSociales idioma="@idioma" />
 		</div>
 	</div>
 
