--- a/pepeizqs deals web/Pages/Contact.cshtml
+++ b/pepeizqs deals web/Pages/Contact.cshtml
@@ -29,8 +29,5 @@
 	ViewData["Title"] = Herramientas.Idiomas.BuscarTexto(idioma, "Title", "Contact");
 	Layout = "/Pages/Shared/_Layout.cshtml";
 
-    @(await Html.RenderComponentAsync<Componentes.Secciones.Contacto>(RenderMode.ServerPrerendered, new
-    {
-        idioma = idioma
-    }))
+    <component type="typeof(Componentes.Secciones.Contacto)" render-mode="ServerPrerendered" param-idioma="idioma" />
 }
