--- a/pepeizqs deals web/Pages/News.cshtml
+++ b/pepeizqs deals web/Pages/News.cshtml
@@ -49,12 +49,7 @@
 	{
 		@if (adminLogeado == true)
 		{
-			@(await Html.RenderComponentAsync<Componentes.Admin.Noticia>(RenderMode.ServerPrerendered, new
-			{
-				idioma = idioma,
-				noticiaId = Model.noticia.Id,
-				usuarioId = usuario?.Id
-			}))
+			<component type="typeof(Componentes.Admin.Noticia)" render-mode="Server" param-idioma="idioma" param-noticiaId="Model.noticia.Id" param-usuarioId="usuario?.Id"/>
 		}
 	}
 
@@ -73,28 +68,39 @@
 
 	if (seo == true)
 	{
-		@(await Html.RenderComponentAsync<Componentes.Secciones.Seo>(RenderMode.ServerPrerendered, new
-		{
-			idioma = idioma,
-			titulo = titulo,
-			enlace = enlace,
-			canonical = enlace,
-			imagen = imagen
-		}))
+		string texto = Herramientas.Idiomas.ElegirTexto(idioma, Model.noticia.ContenidoEn, Model.noticia.ContenidoEs);
 
-		@(await Html.RenderComponentAsync<Componentes.Secciones.Noticia>(RenderMode.ServerPrerendered, new
+		if (string.IsNullOrEmpty(texto) == false)
 		{
-			idioma = idioma,
-			noticiaId = Model.noticia.Id
-		}))
+			if (texto.Contains("</div>") == true)
+			{
+				int int1 = texto.IndexOf("</div>");
+				texto = texto.Remove(int1, texto.Length - int1);
+
+				if (texto.Contains("<div") == true)
+				{
+					int int2 = texto.IndexOf(">");
+					texto = texto.Remove(0, int2 + 1);
+				}
+			}
+			else
+			{
+				if (texto.Contains("<") == true)
+				{
+					int int1 = texto.IndexOf("<");
+					texto = texto.Remove(int1, texto.Length - int1);
+				}
+			}
+		}
+
+		string descripcion = texto;
+
+		<component type="typeof(Componentes.Secciones.Seo)" render-mode="Server" param-idioma="idioma" param-titulo="titulo" param-descripcion="descripcion" param-enlace="enlace" param-canonical="enlace" param-imagen="imagen"/>
+
+		<component type="typeof(Componentes.Secciones.Noticia)" render-mode="Server" param-idioma="idioma" param-noticiaId="Model.noticia.Id" />
 	}
 	else
 	{
-		@(await Html.RenderComponentAsync<Componentes.Secciones.Noticia>(RenderMode.Server, new
-		{
-			idioma = idioma,
-			noticiaId = Model.noticia.Id,
-			usuarioId = usuario?.Id
-		}))
+		<component type="typeof(Componentes.Secciones.Noticia)" render-mode="Server" param-idioma="idioma" param-noticiaId="Model.noticia.Id" param-usuarioId="usuario?.Id" />
 	}
 }
