--- a/pepeizqs deals web/Pages/Shared/_Layout.cshtml
+++ b/pepeizqs deals web/Pages/Shared/_Layout.cshtml
@@ -1,7 +1,8 @@
 ﻿@using APIs.Steam
-@using Microsoft.AspNetCore.Identity;
-@using Microsoft.Extensions.Caching.Memory;
-@using pepeizqs_deals_web.Areas.Identity.Data;
+@using Microsoft.AspNetCore.Components.Web
+@using Microsoft.AspNetCore.Identity
+@using Microsoft.Extensions.Caching.Memory
+@using pepeizqs_deals_web.Areas.Identity.Data
 
 @inject SignInManager<Usuario> SignInManager
 @inject UserManager<Usuario> UserManager
@@ -171,8 +172,9 @@
     <meta name="msapplication-TileColor" content="#002033" />
     <meta name="msapplication-TileImage" content="/favicons/ms-icon-144x144.png" />
     <meta name="theme-color" content="#002033" />
-    <meta property="description" content="@descripcion" />
 
+    <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
+  
     <base href="/" />
 </head>
 
@@ -180,12 +182,7 @@
     <header class="cabecera">
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm cuerpo-ancho" style="padding: 0px;">
             <div class="cabecera-poner">
-                @(await Html.RenderComponentAsync<Componentes.Interfaz.Cabecera>(RenderMode.ServerPrerendered, new { 
-                    idioma = idioma, 
-                    usuario = usuario,
-                    usuarioLogeado = usuarioLogeado,
-                    ubicacionEnlace = Context.Request.Path.ToString()
-                }))
+                 <component type="typeof(Componentes.Interfaz.Cabecera)" render-mode="ServerPrerendered" param-idioma="idioma" param-usuario="usuario" param-usuarioLogeado="usuarioLogeado" param-ubicacionEnlace="Context.Request.Path.ToString()"/>
             </div>
         </nav>
     </header>
@@ -267,10 +264,7 @@
                 </div>
 
                 <div style="padding: 0px 80px; display: flex; flex-direction: column; gap: 30px;">
-                    @(await Html.RenderComponentAsync<Componentes.Interfaz.RedesSociales>(RenderMode.Server, new {
-                        idioma = idioma,
-                        tamañoFuente = "24px"
-                    }))
+                    <component type="typeof(Componentes.Interfaz.RedesSociales)" render-mode="Server" param-idioma="idioma"/>
                 </div>
 
                 <div>
