--- a/pepeizqs deals web/Pages/api.cshtml
+++ b/pepeizqs deals web/Pages/api.cshtml
@@ -31,8 +31,5 @@
 	ViewData["Title"] = Herramientas.Idiomas.BuscarTexto(idioma, "Title", "Api");
 	Layout = "/Pages/Shared/_Layout.cshtml";
 
-	@(await Html.RenderComponentAsync<Componentes.Secciones.Api>(RenderMode.ServerPrerendered, new
-	{
-		idioma = idioma
-	}))
+	<component type="typeof(Componentes.Secciones.Api)" render-mode="ServerPrerendered" param-idioma="idioma" />
 }
