--- a/pepeizqs deals web/Pages/historical-lows.cshtml
+++ b/pepeizqs deals web/Pages/historical-lows.cshtml
@@ -28,7 +28,9 @@
 		}
 	}
 
-	ViewData["Title"] = Herramientas.Idiomas.BuscarTexto(idioma, "Title", "HistoricalLows");
+	string titulo = Herramientas.Idiomas.BuscarTexto(idioma, "Title", "HistoricalLows");
+
+	ViewData["Title"] = titulo;
 	Layout = "/Pages/Shared/_Layout.cshtml";
 
 	bool seo = false;
@@ -46,31 +48,15 @@
 
 	if (seo == true)
 	{
+		string descripcion = Herramientas.Idiomas.BuscarTexto(idioma, "String22", "HistoricalLows");
 		string enlace = "https://pepeizqdeals.com/historical-lows/";
 
-		@(await Html.RenderComponentAsync<Componentes.Secciones.Seo>(RenderMode.ServerPrerendered, new
-		{
-			idioma = idioma,
-			titulo = Herramientas.Idiomas.BuscarTexto(idioma, "Title", "HistoricalLows"),
-			enlace = enlace,
-			canonical = enlace,
-			descripcion = Herramientas.Idiomas.BuscarTexto(idioma, "String22", "HistoricalLows")
-		}))
+		<component type="typeof(Componentes.Secciones.Seo)" render-mode="ServerPrerendered" param-idioma="idioma" param-titulo="titulo" param-descripcion="descripcion" param-enlace="enlace" param-canonical="enlace" />
 
-		@(await Html.RenderComponentAsync<Componentes.Secciones.Minimos>(RenderMode.ServerPrerendered, new
-		{
-			idioma = idioma
-		}))
+        <component type="typeof(Componentes.Secciones.Minimos)" render-mode="ServerPrerendered" param-idioma="idioma" />
 	}
 	else
 	{
-		@(await Html.RenderComponentAsync<Componentes.Secciones.Minimos>(RenderMode.Server, new
-		{
-			idioma = idioma,
-			usuarioId = usuario?.Id,
-			usuarioLogeado = usuarioLogeado,
-			drmEscrito = Model.drm,
-			tiendaEscrita = Model.tienda
-		}))
+		<component type="typeof(Componentes.Secciones.Minimos)" render-mode="Server" param-idioma="idioma" param-usuarioId="usuario?.Id" param-usuarioLogeado="usuarioLogeado" param-drmEscrito="Model.drm" param-tiendaEscrita="Model.tienda"/>
 	}
 }
