--- a/pepeizqs deals web/Pages/rss.cshtml
+++ b/pepeizqs deals web/Pages/rss.cshtml
@@ -31,8 +31,5 @@
 	ViewData["Title"] = Herramientas.Idiomas.BuscarTexto(idioma, "Title", "RSS");
 	Layout = "/Pages/Shared/_Layout.cshtml";
 
-	@(await Html.RenderComponentAsync<Componentes.Secciones.RSS>(RenderMode.ServerPrerendered, new
-	{
-		idioma = idioma
-	}))
+	<component type="typeof(Componentes.Secciones.RSS)" render-mode="ServerPrerendered" param-idioma="idioma" />
 }
